--- a/src/app/shared/ui/forms/select-team/select-team.component.html
+++ b/src/app/shared/ui/forms/select-team/select-team.component.html
@@ -11,6 +11,7 @@
         <button
           tuiOption
           [value]="team"
+          (click)="onSelect(team.id!)"
         >
           {{ team.title | titlecase }}
         </button>
