--- a/src/app/components/team/add-edit-team-to-tournament-table/add-edit-team-to-tournament-table.component.less
+++ b/src/app/components/team/add-edit-team-to-tournament-table/add-edit-team-to-tournament-table.component.less
@@ -6,14 +6,14 @@
 .table {
   //border: 1px solid black;
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: minmax(150px, 400px);
 }
 
 .table-row {
   display: grid;
   justify-content: stretch;
   align-items: center;
-  grid-template-columns: minmax(250px, 2fr) minmax(150px, 1fr) minmax(100px, 1fr);
+  grid-template-columns: minmax(100px, 350px) minmax(70px, 70px);
   grid-template-rows: auto auto;
 
   background-color: #f2f2f2;
@@ -32,17 +32,13 @@
   text-overflow: ellipsis; /* add ellipsis (...) at the end if content is too long */
 }
 
-.expand {
-  grid-column: span 3;
-}
-
 .actions {
   display: grid;
   text-align: left;
   justify-content: stretch;
   grid-template-columns: auto;
   grid-template-rows: auto;
-  //grid-column: span 3;
+
 }
 
 .center {
@@ -72,56 +68,4 @@
   margin: 0;
 }
 
-.player-short-profile {
-  display: grid;
-  grid-gap: 16px;
-  grid-template-columns: auto auto;
-  justify-content: flex-start;
-  align-items: start;
-}
 
-.player-photo-short-profile {
-  border-radius: 10px;
-  grid-row: span 2;
-}
-
-@media screen and (max-width: 800px) {
-  .table-row {
-    grid-template-columns: minmax(150px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr);
-    grid-template-rows: auto auto;
-  }
-
-  .expand, .first {
-    grid-column: span 3;
-  }
-
-  .final {
-    grid-template-columns: auto;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .table-row {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto auto;
-  }
-
-  .expand, .first {
-    grid-column: span 2;
-  }
-
-  .final {
-    grid-template-columns: auto;
-  }
-
-  .player-short-profile {
-    display: grid;
-    grid-template-columns: auto;
-    justify-content: stretch;
-    align-items: center;
-  }
-
-  .player-photo-short-profile {
-    grid-row: span 1;
-  }
-}
